manifests/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: mydocctor-auth-service
            port:
              number: 4001
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: mydocctor-user-service
            port:
              number: 4002
      - path: /api/doctor
        pathType: Prefix
        backend:
          service:
            name: mydocctor-doctor-service
            port:
              number: 4003
      - path: /api/appointment
        pathType: Prefix
        backend:
          service:
            name: mydocctor-appointment-service
            port:
              number: 4005
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: mydocctor-payments-service
            port:
              number: 4006
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: mydocctor-chat-service
            port:
              number: 4007
      - path: /api/notification
        pathType: Prefix
        backend:
          service:
            name: mydocctor-notification-service
            port:
              number: 4008
